--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ psycopg2==2.8.6
 pytz==2020.5
 sqlparse==0.4.1
 whitenoise==5.2.0
-django-admin-index == 1.4.0
+django-admin-index==1.4.0
+django-rest-auth==0.9.2
