--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,7 @@ pytz==2020.5
 sqlparse==0.4.1
 whitenoise==5.2.0
 django-admin-index==1.4.0
-django-rest-auth==0.9.2
+django-heroku
+requests
+requests-oauthlib
+django-allauth==0.38.0
