--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ __pycache__/
 # C extensions
 *.so
 runserver.sh
+
+# No .DS_Store
+.DS_Store
+
+#No migrations
+migrations/
+
 # Distribution / packaging
 .Python
 env/
